Fixed overflow in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
 }
 
 body {
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 /* Landing page Submission Criteria */
