--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -11206,7 +11206,7 @@ html{
 }
 
 body {
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 /* Landing page Submission Criteria */
